--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.31.1
-peptacular @ git+https://github.com/pgarrett-scripps/peptacular@main
-pandas==2.2.1
+streamlit==1.44.0
+streamlit-permalink @ git+https://github.com/pgarrett-scripps/streamlit-permalink@cc2769d
+peptacular==2.2.1
 plotly==5.19.0
