--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ peptacular @ git+https://github.com/pgarrett-scripps/peptacular.git@b137d45
 plotly==5.19.0
 streamlit-js-eval==0.1.7
 requests==2.32.3
+matplotlib==3.10.1
